# CSC4005-As3-N-Body-Simulation

./: .gitignore  CMakeLists.txt  README.md  cuda_sbatch.sh  get_logs.sh  mpi_sbatch.sh  omp_mpi_sbatch.sh  omp_sbatch.sh  pthread_sbatch.sh  to_server.sh
include/nbody/: body.cuh  body.hpp
src/: cuda.cu  cuda_gui.cu  mpi.cpp  mpi_gui.cpp  openmp.cpp  openmp_gui.cpp  openmp_mpi.cpp  openmp_mpi_gui.cpp  pthread.cpp  pthread_gui.cpp  sequential.cpp  sequential_gui.cpp
